# xCrape

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_create_sent_tweets.py
src/xcrape/: __main__.py
src/xcrape/application/dtos/: tweet_dto.py
src/xcrape/application/use_cases/: fetch_and_notify.py
src/xcrape/domain/: exceptions.py
src/xcrape/domain/entities/: tweet.py
src/xcrape/domain/repositories/: protocols.py
src/xcrape/domain/value_objects/: tweet_id.py
src/xcrape/infrastructure/api_clients/: scrapebadger.py  telegram.py
src/xcrape/infrastructure/persistence/: models.py  repositories.py  session.py
src/xcrape/infrastructure/scheduler/: jobs.py
src/xcrape/shared/: config.py
tests/integration/persistence/: test_async_tweet_repository.py
tests/unit/application/: test_fetch_and_notify_use_case.py
tests/unit/domain/: test_tweet.py
